--- a/Application/src/main/resources/templates/artistDetails.html
+++ b/Application/src/main/resources/templates/artistDetails.html
@@ -29,7 +29,7 @@
                     <th>ふりがな</th>
                     <th>誕生日</th>
                     <th>年齢</th>
-                    <th class="text-center">編集</th>
+                    <th class="text-center">更新</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,7 +40,7 @@
                     <td th:text="${member.memberBirthday}"></td>
                     <td th:text="${member.age}"></td>
                     <td class="text-center">
-                        <a th:href="@{/members/update/{id}(id=${member.memberId}, artistId=${member.artistId})}" class="btn btn-success btn-sm">編集</a>
+                        <a th:href="@{/members/update/{id}(id=${member.memberId}, artistId=${member.artistId})}" class="btn btn-success btn-sm">更新</a>
                     </td>
                 </tr>
             </tbody>
